rojo-test/src/snapshots/build_test__client_in_folder.snap
---
created: "2019-08-09T01:29:47.650277200Z"
creator: insta@0.10.0
source: rojo-test/src/build_test.rs
expression: contents
---
<roblox version="4">
  <Item class="Folder" referent="0">
    <Properties>
      <string name="Name">client_in_folder</string>
    </Properties>
    <Item class="LocalScript" referent="1">
      <Properties>
        <string name="Name">localScript</string>
        <string name="Source">-- This is a Lua client script</string>
      </Properties>
    </Item>
  </Item>
</roblox>
