rojo-test/src/snapshots/build_test__client_init.snap
---
created: "2019-08-16T19:37:51.277332900Z"
creator: insta@0.10.0
source: rojo-test/src/build_test.rs
expression: contents
---
<roblox version="4">
  <Item class="LocalScript" referent="0">
    <Properties>
      <string name="Name">client_init</string>
      <string name="Source">return "From folder/init.client.lua"</string>
    </Properties>
  </Item>
</roblox>
