rojo-test/src/snapshots/build_test__csv_bug_145.snap
---
created: "2019-08-14T22:42:52.297447700Z"
creator: insta@0.10.0
source: rojo-test/src/build_test.rs
expression: contents
---
<roblox version="4">
  <Item class="Folder" referent="0">
    <Properties>
      <string name="Name">csv_bug_145</string>
    </Properties>
    <Item class="LocalizationTable" referent="1">
      <Properties>
        <string name="Name">normal</string>
        <string name="Contents">[{"key":"Count","example":"A number demonstrating issue 145","source":"3","values":{"es":"7"}}]</string>
      </Properties>
    </Item>
  </Item>
</roblox>