rojo-test/src/snapshots/build_test__csv_in_folder.snap
---
created: "2019-08-14T22:34:06.206495600Z"
creator: insta@0.10.0
source: rojo-test/src/build_test.rs
expression: contents
---
<roblox version="4">
  <Item class="Folder" referent="0">
    <Properties>
      <string name="Name">csv_in_folder</string>
    </Properties>
    <Item class="LocalizationTable" referent="1">
      <Properties>
        <string name="Name">normal</string>
        <string name="Contents">[{"key":"Ack","example":"An exclamation of despair","source":"Ack!","values":{"es":"¡Ay!"}}]</string>
      </Properties>
    </Item>
  </Item>
</roblox>
