rojo-test/src/snapshots/build_test__plain.txt.snap
---
created: "2019-08-09T00:17:42.253380600Z"
creator: insta@0.10.0
source: rojo-test/src/build_test.rs
expression: contents
---
<roblox version="4">
  <Item class="StringValue" referent="0">
    <Properties>
      <string name="Name">plain</string>
      <string name="Value">This is a bare text file with no project.</string>
    </Properties>
  </Item>
</roblox>
